--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "proto-simple-editor",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Edit an ProtoDocument AST document via code.",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha test/regression/regress.test.js"
+    "test": "node ./node_modules/nyc/bin/nyc --reporter=html --reporter=text mocha ./test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "proto-ast-compile": "^1.0.2",
     "proto-parser": "^0.0.9"
   }
